將基底Controller抽象化方便之後管理 PseudoEstate\Controllers\BaseController.cs PseudoEstate\Controllers\AgentsController.cs PseudoEstate\Controllers\CustomersController.cs PseudoEstate\Controllers\EstateTypesController.cs PseudoEstate\Controllers\EstatesController.cs
多一個Report的端點來測試LINQ的使用
PseudoEstateAPI\Controllers\ReportController.cs
PseudoEstateAPI\Models\Report.cs

更新Stub
swagger.json
PseudoEstate\Models\SwaggerClient.cs

多一個Report查詢頁 (簡易版)
PseudoEstate\Controllers\ReportController.cs
PseudoEstate\Views\Report\ByAgent.cshtml
PseudoEstate\Views\Report\Index.cshtml

註解修正
PseudoEstateAPI\Controllers\AgentsController.cs

先暫時移除掉沒用到的參考
PseudoEstate\Program.cs
PseudoEstate\PseudoEstate.csproj

補上入口頁與說明
PseudoEstate\Views\Home\Index.cshtml
PseudoEstate\Views\Shared\_Layout.cshtml
PseudoEstateAPI\PseudoEstateAPI.csproj
